--- a/root/css/style.css
+++ b/root/css/style.css
@@ -1,10 +1,11 @@
 .custom-header {
-    background-color: #E6E6E6;
+    background-image: url(../img/fondo.jpg);
+    background-size: cover;
 }
 
 .custom-header img {
     height: 147px;
-    width: 80px;
+    width: 125px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -14,7 +15,7 @@
 .custom-header h1 {
     background-color: #C4C4C4;
     text-align: center;
-    font-family: "Times New Roman";
+    font-family: 'Benne', serif;
     font-style: normal;
     font-weight: bold;
     font-size: 30px;
@@ -28,7 +29,7 @@
 
 .custom-section h2 {
     background-color: #C4C4C4;
-    font-family: "Times New Roman";
+    font-family: 'Benne', serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
@@ -50,13 +51,34 @@
     background-color: #005677;
     text-align: center;
     color: white;
-    font-family: Times New Roman;
+    font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
     text-transform: uppercase;
+    padding: 7px;
+    vertical-align: middle;
 }
 
 .custom-footer img {
     margin-left: 20px;
+}
+
+.custom-button {
+
+    background-color: #005677;
+    font-family: 'Benne', serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: white;
+    padding: 4px;
+}
+
+.link-section {
+
+    padding-top: 40px;
+    text-align: center;
 }
