--- a/Petshop/css/style.css
+++ b/Petshop/css/style.css
@@ -5,6 +5,8 @@
     padding-right: 80px;
     display: flex;
     justify-content: space-between;
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
 }
 .title {
     max-width: 500px;
@@ -14,12 +16,12 @@
     display: flex;
     justify-content: flex-end;
     font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-weight: normal;
+    font-size: 13px;
 }
 
 .box li{
 list-style: none;
+
 }
 
 #menu {
@@ -29,7 +31,8 @@ list-style: none;
     display: flex;
     justify-content: space-between;
     padding: 7px;
-    
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
 }
 
 #menu img {
@@ -62,13 +65,35 @@ list-style: none;
     width: 100%;
     min-height: 550px;
     display:inline-block;
+    position: relative;
+    font-family: 'Roboto', sans-serif;
 }
 
-.banner-text {
-    display: flex;
-    flex-direction: column;
-    text-align: right;
+.text-banner {
+    position:absolute;
+    top: 270px;
+    right: 40px;
+    max-width: 400px;
+    text-align: center;
+}
 
+.text-banner h2 {
+    background-color: #FFFFFF;
+    font-size: 30px;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+.text-banner h3 {
+    font-size: 16px;   
+}
+
+.text-banner button {
+    background-color: #F0A83E;
+    color:  #FFFFFF;
+    border-radius: 5px;
+    font-size: 15px;  
+    padding: 10px; 
 }
 
 #icon img {
@@ -76,8 +101,8 @@ list-style: none;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
     margin-top: 50px;
 }
 
@@ -85,16 +110,134 @@ list-style: none;
     text-align: center;
     font-size: 40px;
     margin-top: 10px;
+    font-weight: bold;
     font-family: 'Roboto', sans-serif;
 }
 
 #icon p {
     text-align: center;
     font-family: 'Roboto', sans-serifl;
-    font-size: 24px;
+    font-size: 20px;
     word-spacing: 50px;
 }
 
 .block {
     display: inline-block;
+    padding-right: 40px;
+}
+
+.block:last-child {
+    padding-right: 0px;
+}
+
+.contain {
+    padding-right: 16.5%;
+    padding-left: 16.5%;
+    padding-top: 50px;
+    font-family: 'Roboto', sans-serifl;
+    font-size: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.number {
+    color: #F0A83E
+}
+
+.contact h2{
+    color: #3C2313;
+    font-size: 30px;
+    font-family: 'Roboto', sans-serifl;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 40px;
+}
+.contact input {
+    background-color: #3C2313;
+    border-radius: 15px;
+    padding: 10px;
+    font-family: 'Roboto', sans-serifl;
+    color:#FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    padding-left: 33%;
+    padding-right: 33%;
+}
+
+.button1 {
+    background-color:#8A8787;
+    font-family: 'Roboto', sans-serifl;
+    color:#FFFFFF;
+    font-size: 15px;
+    border-radius: 10px;
+    min-width: 100px;
+}
+
+.button2 {
+    background-color:#F0A83E;
+    font-family: 'Roboto', sans-serifl;
+    color:#FFFFFF;
+    font-size: 15px;
+    border-radius: 10px;
+    min-width: 100px;
+    margin-left: 8px;
+}
+
+.button {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    padding-left: 27%;
+    padding-right: 0%;
+}
+.subscribe {
+    background-color: #F0A83E;
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.subscribe p {
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.subscribe input {
+    background-color: #FFFFFF;
+    color: #A0A0A0;
+    font-size: 8px;
+    border-radius: 10px;
+}
+
+.subscribe button {
+    background-color:#3C2313;
+    color: #FFFFFF;
+    font-size: 8px;
+    border-radius: 10px;
+}
+
+footer {
+    background-color: #3C2313;
+}
+
+.footer h2 {
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+.footer p {
+    color: #8A8787;
+    font-size: 10px;
+}
+.end {
+    background-color: black;
+    color: #FFFFFF;
+    font-size: 12px;
 }
