--- a/Heroes/css/style.css
+++ b/Heroes/css/style.css
@@ -18,23 +18,26 @@
 }
 
 #section {
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 10%;
-    padding-bottom: 10%;
-}
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-bottom: 40px;
+   }
 
 .card {
        display: inline-block;
-       width: 400px;
+       width: 300px;
        height: 550px;
        margin-left: auto;
-       margin-right: 26px;
+       margin-right: auto;
+       margin-top: 40px;
        background-color: #F3F3F3;
 }
 
-.card:last-child {
-       margin-right: 0px;
+@media (min-width: 768px) {
+    #section {
+        flex-flow: row wrap;
+    }
 }
 
 .card p {
@@ -65,7 +68,7 @@
 
 .image {
     position: relative;
-    width: 400px;
+    width: 300px;
     margin-bottom: 80px;
 }
 
@@ -73,14 +76,16 @@
     position: relative;
     width: 100%;
     height: auto;
+    border-radius: 20px;
     }
 
 .image2{
     position: absolute;
     z-index: 10;
-    left: 150px;
-    top: 200px;
+    left: 100px;
+    top: 145px;
     border-radius: 150px;
+    width: 100px;
 
 }
 
@@ -88,7 +93,7 @@
     position: absolute;
     z-index: 10;
     left: 30px;
-    bottom: 210px;
+    top: 30px;
     border-radius: 150px;
     color: #CC2424;
     font-size: 25px;
