--- a/Heroes/css/style.css
+++ b/Heroes/css/style.css
@@ -59,7 +59,6 @@
     color:#FFFFFF;
     font-size: 15px;
     min-width: 100px;
-         
 }
 
 .description {
@@ -97,6 +96,24 @@
     border-radius: 150px;
     color: #CC2424;
     font-size: 25px;
+}
+
+#button {
+    position: fixed;
+    background-color: #00669F;
+    z-index: 1000;
+    width: 50px;
+    bottom: 20px;
+    right: 21px;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    line-height: 45px;
+       
 }
 
 #footer {
