--- a/Petshop/css/style.css
+++ b/Petshop/css/style.css
@@ -1,3 +1,4 @@
+
 #top {
     background-color: #222222;
     color: #F3F3F3;
@@ -5,7 +6,7 @@
     padding-right: 80px;
     display: flex;
     justify-content: space-between;
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
 }
 .title {
@@ -41,7 +42,7 @@ list-style: none;
     height: 30px;
     margin-top: 10px;
     margin-left: 25px;
-}
+    }
 
 #list li{
 
@@ -67,7 +68,7 @@ list-style: none;
     display:inline-block;
     position: relative;
     font-family: 'Roboto', sans-serif;
-}
+    }
 
 .text-banner {
     position:absolute;
@@ -116,7 +117,7 @@ list-style: none;
 
 #icon p {
     text-align: center;
-    font-family: 'Roboto', sans-serifl;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     word-spacing: 50px;
 }
@@ -126,15 +127,15 @@ list-style: none;
     padding-right: 40px;
 }
 
-.block:last-child {
-    padding-right: 0px;
-}
 
 .contain {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding-right: 16.5%;
-    padding-left: 16.5%;
+    padding-left: 14%;
     padding-top: 50px;
-    font-family: 'Roboto', sans-serifl;
+    font-family: 'Roboto', sans-serif;
     font-size: 15px;
     text-align: center;
     font-weight: bold;
@@ -147,16 +148,18 @@ list-style: none;
 .contact h2{
     color: #3C2313;
     font-size: 30px;
-    font-family: 'Roboto', sans-serifl;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     font-weight: bold;
     padding-top: 40px;
-}
+    text-align: center;
+    }
+
 .contact input {
     background-color: #3C2313;
     border-radius: 15px;
     padding: 10px;
-    font-family: 'Roboto', sans-serifl;
+    font-family: 'Roboto', sans-serif;
     color:#FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -165,6 +168,7 @@ list-style: none;
 .contact {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     max-width: 500px;
     padding-left: 33%;
     padding-right: 33%;
@@ -172,7 +176,7 @@ list-style: none;
 
 .button1 {
     background-color:#8A8787;
-    font-family: 'Roboto', sans-serifl;
+    font-family: 'Roboto', sans-serif;
     color:#FFFFFF;
     font-size: 15px;
     border-radius: 10px;
@@ -181,7 +185,7 @@ list-style: none;
 
 .button2 {
     background-color:#F0A83E;
-    font-family: 'Roboto', sans-serifl;
+    font-family: 'Roboto', sans-serif;
     color:#FFFFFF;
     font-size: 15px;
     border-radius: 10px;
@@ -191,11 +195,9 @@ list-style: none;
 
 .button {
     display: flex;
-    flex-direction: row;
     margin-top: 20px;
-    padding-left: 27%;
-    padding-right: 0%;
-}
+    }
+
 .subscribe {
     background-color: #F0A83E;
     margin-top: 80px;
