Agregando CV animada

--- a/Cv Julieth Ruiz/css/style.css
+++ b/Cv Julieth Ruiz/css/style.css
@@ -1,6 +1,6 @@
-.custom-header {
-    background-image: url(../img/fondo\ 2.jpg);
+.custom-header {background-image: url(../img/fondo\ 2.jpg);
     background-size: cover;
+    
 }
 
 .custom-header img {
